@@ -1,4 +1,8 @@
 Changes with Apache 2.0.31-dev
+  *) HPUX 11.*: Do not kill the child process when accept() 
+     returns ENOBUFS on HPUX 11.*. (ported from a 1.3 patch
+     by [madhusudan_mathihalli@hp.com])
+     [Bill Stoddard]
 
   *) Fix a problem in the parsing of the <Proxy foo> directive.
      [Jeff Trawick]
